Issue #19474: Argument Clinic now always specifies a default value for variables in option groups, to prevent "uninitialized value" warnings.